--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
 	display: block; 
 	font-size: 2em; 
 	margin-top: 0.67em; 
@@ -7,15 +7,12 @@ h1{
 	margin-right: 0; 
 	font-weight: bold;
 }
-
-nav ul li{
-	background-color: #4DFF4D;
-	padding:10px;
-	width:25%;
-	border:1px solid black;
+ */
+#intro{
+	background-color:black;
 }
 
-body{
+/* body{
 	margin:1%;
 	padding:1%;
 }
@@ -41,3 +38,4 @@ img{
     border-radius: 10px;
     margin: 10px;
 }
+ */
