--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* h1{
+ h1{
 	display: block; 
 	font-size: 2em; 
 	margin-top: 0.67em; 
@@ -7,9 +7,11 @@
 	margin-right: 0; 
 	font-weight: bold;
 }
- */
+
 #intro{
 	background-color:black;
+	text-align:left;
+	color:white;
 }
 
 /* body{
