--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
  h1{
 	display: block; 
 	font-size: 2em; 
-	margin-top: 0.67em; 
-	margin-bottom: 0.67em; 
-	margin-left: 0; 
-	margin-right: 0; 
+	text-align:center;
 	font-weight: bold;
 }
 
