--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,32 @@
-head,header,footer {
-	background-color:black;
+html{
+	font-family: "Ludica Grande", Sans-Serif;
+	color: #FFFFFF;
+	background-color:#000000;
 }
 
+
 h1{
-	display: block; 
-/* 	font-size: 2em;  */
+	font-size: 64px; 
 	text-align:center;
 	font-weight: bold;
 }
+h2{
+	font-size: 30px;
+	text-shadow: 5px 5px 2px #808080;
+		
+}
+p{
+	font-size: 24px;
+	padding-top: 20px;
+}
+	
 
 #intro{
-	background-color:black;
 	text-align:left;
-	color:white;
 }
 
 #red{
 	background-color:red;
-	color:white;
 	text-align:right;
 }
 
@@ -41,8 +50,8 @@ header, main, nav, footer{
  */
 
 img{
-    height: 200px;
-    width:max-width;
+/*     height: 200px; */
+    width:525px;
 	margin-left:auto;
 	margin-right:auto;
 	
