--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ html{
 h1{
 	font-size: 64px; 
 	text-align:center;
-	font-weight: bold;
 }
 h2{
 	font-size: 30px;
@@ -50,8 +49,9 @@ header, main, nav, footer{
  */
 
 img{
-/*     height: 200px; */
-    width:525px;
+	display:block;
+   	width:525px;
+	object-fit: contain;
 	margin-left:auto;
 	margin-right:auto;
 	
