--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ div{
 	text-align: right;
 }
 
+#yellow h2,p{
+	color:#000000;
+}
+#yellow h2{
+	text-shadow: 5px 5px 2px #c7e2c7;
+}
+
 img{
 	display:block;
    	width:525px;
