--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ div{
 	background-color: #008000 ;
 	text-align: left;	
 }
-footer.p{
+footer p{
 	text-align:right;
 	padding-right:10px;
 	padding-bottom:10px;
