--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 html{
 	font-family: "Ludica Grande", Sans-Serif;
-/* 	background-color:#000000; */
-	background-color:red;
+	background-color:#000000;
 	color: #FFFFFF;
 }
 
@@ -48,7 +47,7 @@ div{
 	text-align: right;
 }
 
-#yellow h2,p{
+#yellow h2, #yellow p{
 	color:#000000;
 }
 #yellow h2{
