--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-	font-family: "Ludica Grande", Sans-Serif;
+	font-family: "Ludica Grande", "Sans-Serif";
 	background-color:#000000;
 	color: #FFFFFF;
 }
