--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html{
-	font-family: "Ludica Grande", sans-serif;
+	font-family: "Lucida Grande", sans-serif;
 	background-color:#000000;
 	color: #FFFFFF;
 }
