--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ p{
 	font-size: 24px;
 	padding-top: 20px;
 	color: #FFFFFF;
-	margin:0;
-	padding:0;
+	border-style:none;
 }
 div{
 	min-height:150px;
