--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ div{
 	text-align: left;	
 }
 footer p{
-	margin-top:-20px;
+	border-style: none;
+	padding:0;
 	padding-bottom:10px;
 	padding-right:10px;
 	text-align:right;
